# repofix-agent-book

./: .gitignore  AGENTS.md  README.md  mkdocs.yml
.github/ISSUE_TEMPLATE/: book-feedback.yml  chapter-lab.yml  config.yml
.github/releases/: v0.1.0.md
.github/workflows/: companion-ci.yml  pages.yml  release.yml
.plans/: tool-gateway-client-plan.md
docs/: index.md
docs/agent/: loop-and-state.md  python-foundations.md  tools-and-safety.md
docs/appendix/: 28-week-plan.md  checklists.md  glossary.md
docs/evaluation/: context-and-recovery.md  evaluation-system.md
docs/foundations/: architecture.md  cloud-workspace.md  fixture.md
docs/playgrounds/: index.md
docs/preface/: chapter-workflow.md  implementation-status.md  learning-path.md
docs/product/: typescript-foundations.md  web-console.md
docs/production/: chatgpt-and-codex.md  ci-and-deployment.md  completion.md
docs/runtime/: architecture-decisions.md  contracts.md  daytona-sandbox.md  go-control-plane.md  persistence-and-events.md  python-service.md
docs/stylesheets/: extra.css  online-runner.css
examples/repofix/: .gitignore  AGENTS.md  Makefile  README.md  chapters.json  go.mod
examples/repofix/services/agent/: pyproject.toml
examples/repofix/services/agent/src/repofix_agent/: __init__.py  __main__.py  api.py  api_models.py  config.py  domain.py  errors.py  fake.py  openai_adapter.py  path_tools.py  protocols.py  runner.py  schemas.py  service.py  tool_gateway.py
examples/repofix/services/agent/tests/: test_api.py  test_openai_adapter.py  test_path_tools.py  test_runner.py  test_schemas.py  test_tool_gateway.py
(+97 files in other folders)
