[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repofix-agent"
version = "0.1.0"
description = "Deterministic, test-first core for the RepoFix learning project"
requires-python = ">=3.14,<3.15"
dependencies = []

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.1.1",
  "ruff==0.15.22",
]
live = [
  "openai>=2.0,<3",
]
service = [
  "fastapi==0.139.2",
  "pydantic==2.13.4",
  "uvicorn==0.51.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
